// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoRemoveButton component: should be rendered correctly 1`] = `
<DefaultButton
  busy={false}
  className="todo-remove-button"
  disabled={false}
  extension="narrow"
  icon="delete"
  iconOnly={true}
  label="Delete"
  onClick={[Function]}
  theme="danger"
/>
`;

exports[`TodoRemoveButton component: should handle isWorking correctly (display spinner) 1`] = `
<DefaultButton
  busy={true}
  className="todo-remove-button"
  disabled={true}
  extension="narrow"
  icon="delete"
  iconOnly={true}
  label="Delete"
  onClick={[Function]}
  theme="danger"
/>
`;
